[package]
name = "dytl"
version = "0.1.0"
edition = "2024"
description = "Multi-platform live stream toolbox for Douyin, Kuaishou, and Twitter/X"
license = "MIT"
readme = "README.md"
keywords = ["live", "stream", "recorder", "douyin", "twitter"]
categories = ["command-line-utilities", "multimedia"]
publish = false

[dependencies]
ctrlc = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
